# ROS2_TM_ROBOT_LIPS

./: README.md
TM_ROS2_CONTROL/: .gitignore  my_workspace.md  myenv.sh
TM_ROS2_CONTROL/src/Motion_vision_package/: CMakeLists.txt  package.xml
TM_ROS2_CONTROL/src/Motion_vision_package/scripts/: Get_Flange_and_Tool_Pose.py  Send_simple_msg.py  april_tag_detect.py  lips_camera_calibration_hand_eye.py  lips_camera_info  lips_camera_python.py  lips_camera_ros.py  move_to_fixture.py  robot_move.py  tm_ros_test.txt
TM_ROS2_CONTROL/src/Motion_vision_package/scripts/calibrate_hand_eye/: readme.md
TM_ROS2_CONTROL/src/Motion_vision_package/scripts/python_camera/: README.md
TM_ROS2_CONTROL/src/Motion_vision_package/scripts/python_camera/align-depth-color/: align-depth-color.py  readme.md
TM_ROS2_CONTROL/src/Motion_vision_package/scripts/python_camera/depth-data/: README.md  depth-data.py
TM_ROS2_CONTROL/src/Motion_vision_package/scripts/python_camera/environment_setup/: environment_setup.py  readme.md
TM_ROS2_CONTROL/src/Motion_vision_package/scripts/python_camera/hello-lipsedge-sdk/: hello-lipsedge-sdk.py  readme.md
TM_ROS2_CONTROL/src/Motion_vision_package/scripts/python_camera/opencv_viewer/: README.md  opencv_viewer.py
TM_ROS2_CONTROL/src/Motion_vision_package/scripts/python_camera/range-filter/: README.md  range-filter.py
TM_ROS2_CONTROL/src/Motion_vision_package/scripts/python_camera/record/: README.md  record.py
TM_ROS2_CONTROL/src/Motion_vision_package/scripts/python_camera/remove-background/: README.md  remove-background.py
TM_ROS2_CONTROL/src/Motion_vision_package/scripts/python_camera/roi/: README.md  roi.py
TM_ROS2_CONTROL/src/Motion_vision_package/src/: TM_control_node.cpp
TM_ROS2_CONTROL/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
TM_ROS2_CONTROL/src/tmr_ros2-humble/: README.md
TM_ROS2_CONTROL/src/tmr_ros2-humble/custom_package/: CMakeLists.txt  package.xml
TM_ROS2_CONTROL/src/tmr_ros2-humble/techman_robot_get_status/: setup.py
TM_ROS2_CONTROL/src/tmr_ros2-humble/tm_mod_urdf/: package.xml
TM_ROS2_CONTROL/src/tmr_ros2-humble/tm_msgs/: package.xml
TM_ROS2_CONTROL/tmr_ros2-humble/: .gitignore  LICENSE
TM_ROS2_CONTROL/tmr_ros2-humble/custom_package/src/: send_command.cpp  sub_img.cpp
TM_ROS2_CONTROL/tmr_ros2-humble/demo/: package.xml
TM_ROS2_CONTROL/tmr_ros2-humble/demo/get_status_demo_src/: demo_get_sct_response.cpp  demo_get_torque_feedback.cpp
TM_ROS2_CONTROL/tmr_ros2-humble/demo/src/: demo_ask_sta.cpp  demo_leave_listen_node.cpp  demo_set_io.cpp  demo_write_item.cpp
TM_ROS2_CONTROL/tmr_ros2-humble/techman_robot_get_status/: package.xml
TM_ROS2_CONTROL/tmr_ros2-humble/techman_robot_msgs/: package.xml
TM_ROS2_CONTROL/tmr_ros2-humble/tm_description/: CMakeLists.txt  package.xml
TM_ROS2_CONTROL/tmr_ros2-humble/tm_description/meshes/tm16/collision/: tm16-arm1_c.stl
TM_ROS2_CONTROL/tmr_ros2-humble/tm_description/meshes/tm16/visual/: tm16-arm1.mtl  tm16-arm2.stl
TM_ROS2_CONTROL/tmr_ros2-humble/tm_description/meshes/tm20/collision/: tm20-arm1_c.stl  tm20-arm2_c.stl  tm20-j1_c.stl  tm20-j5_c.stl  tm20-j6_c.stl
TM_ROS2_CONTROL/tmr_ros2-humble/tm_description/meshes/tm20/visual/: tm20-arm2.stl  tm20-j1.mtl  tm20-j5.mtl  tm20-j6.stl
TM_ROS2_CONTROL/tmr_ros2-humble/tm_description/rviz/: view_robot.rviz
TM_ROS2_CONTROL/tmr_ros2-humble/tm_description/urdf/: tm16-nominal.urdf
TM_ROS2_CONTROL/tmr_ros2-humble/tm_description/xacro/: macro.materials.xacro  macro.tm12x-nominal.urdf.xacro  macro.tm14-nominal.urdf.xacro  macro.tm14x-nominal.urdf.xacro  macro.tm16-nominal.urdf.xacro  macro.tm5x-700-nominal.urdf.xacro  tm12.urdf.xacro  tm12x.urdf.xacro  tm14.urdf.xacro  tm14x.urdf.xacro  tm5x-700.urdf.xacro  tm5x-900.urdf.xacro
TM_ROS2_CONTROL/tmr_ros2-humble/tm_driver/: CMakeLists.txt  package.xml
TM_ROS2_CONTROL/tmr_ros2-humble/tm_driver/src/: tm_print.cpp  tm_robot_state.cpp
TM_ROS2_CONTROL/tmr_ros2-humble/tm_gazebo/: CMakeLists.txt  package.xml
TM_ROS2_CONTROL/tmr_ros2-humble/tm_gazebo/config/: tm_controllers.yaml
TM_ROS2_CONTROL/tmr_ros2-humble/tm_gazebo/launch/: tm12_gazebo.launch.py  tm14x_gazebo.launch.py  tm5-700_gazebo.launch.py  tm5-900_gazebo.launch.py  tm5x-700_gazebo.launch.py  tm5x-900_gazebo.launch.py
TM_ROS2_CONTROL/tmr_ros2-humble/tm_gazebo/scripts/: kill_gz_pid.sh  run_gz_motionplanning.sh  send_goal.sh
TM_ROS2_CONTROL/tmr_ros2-humble/tm_gazebo/xacro/: macro.colors.xacro  macro.materials.xacro  macro.tm12-nominal.urdf.xacro  macro.tm14-nominal.urdf.xacro  macro.tm5-900-nominal.urdf.xacro  tm12.urdf.xacro  tm12x.urdf.xacro  tm14.urdf.xacro  tm16.urdf.xacro  tm20.urdf.xacro  tm5-700.urdf.xacro  tm5-900.urdf.xacro  tm5x-900.urdf.xacro
TM_ROS2_CONTROL/tmr_ros2-humble/tm_mod_urdf/: setup.py
TM_ROS2_CONTROL/tmr_ros2-humble/tm_msgs/: CMakeLists.txt
TM_ROS2_CONTROL/tmr_ros2-humble/ui_for_debug_and_demo/: package.xml
(+170 files in other folders)
