<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tm_gazebo</name>
  <version>1.0.0</version>
  <description>Gazebo Fortress simulation for the TM AI Cobot S-Series.</description>

  <author>Yh Wang</author>
  <author email="yh.wang@tm-robot.com">Yh Wang</author>
  <maintainer email="yh.wang@tm-robot.com">Yh Wang</maintainer>

  <license>BSD-3-Clause</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>control_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>

  <exec_depend>ign_ros2_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>sdformat_urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>tm_description</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>tm_controllers</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
